[hdpowerview] initial fixes from live testing
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>